[package]
authors = ["Hubert Shelley <hubertshelley@163.com>"]
edition = "2024"
homepage = "https://github.com/FluxFaaS/flux"
license = "Apache-2.0"
name = "flux"
readme = "./readme.md"
repository = "https://github.com/FluxFaaS/flux"
version = "0.1.0"

[[bin]]
name = "flux"
path = "src/main.rs"

[[bin]]
name = "flux-cli"
path = "src/bin/flux-cli.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
silent = "2"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
scru128 = { version = "3.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
# 第二阶段新增 - 缓存支持
lru = "0.12"
dashmap = "6.0"
